--- a/index.html
+++ b/index.html
@@ -3,49 +3,44 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Portfolio de Yacine</title>
+  <title>Portfolio | Amine El Mir</title>
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
   <header>
-    <div class="logo">Yacine</div>
+    <div class="logo">Amine</div>
     <nav>
       <ul>
-        <li><a href="#about">À propos</a></li>
+        <li><a href="#hero">Accueil</a></li>
         <li><a href="#projects">Projets</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
-    <button id="theme-toggle">🌙</button>
   </header>
 
   <section id="hero">
-    <h1>Bonjour, je suis Yacine</h1>
-    <p>Développeur passionné en formation BTS CIEL</p>
-  </section>
-
-  <section id="about">
-    <h2>À propos</h2>
-    <p>Étudiant en BTS CIEL, je me passionne pour le développement web, la cybersécurité, et les technologies modernes comme Docker, GitHub, les API et plus encore.</p>
+    <h1>Salut, moi c’est Amine El Mir</h1>
+    <p>20 ans, étudiant en 2<sup>e</sup> année de BTS CIEL</p>
+    <p>Formé en frontend la première année, backend la seconde. J’ai aussi étudié plusieurs aspects de la cybersécurité (programmation, réseau, tokens, HTTPS...)</p>
   </section>
 
   <section id="projects">
     <h2>Mes projets</h2>
-    <div class="project-list">
-      <!-- Projets injectés dynamiquement -->
-    </div>
+    <ul>
+      <li>Cafetière connectée (Arduino, RTC, I2C, écran)</li>
+      <li>API REST en Node.js + Express + Docker</li>
+      <li>Mini-site sécurisé avec HTTPS, token JWT</li>
+    </ul>
   </section>
 
   <section id="contact">
     <h2>Contact</h2>
-    <p>Email : elmiryacine6@gmail.com</p>
-    <p>Téléphone : 07 82 50 69 32</p>
+    <p>Email : amineelmir030gmail.com</p>
+    <p>Téléphone : 07 67 06 19 69/p>
   </section>
 
   <footer>
-    <p>&copy; 2025 Yacine El Mir</p>
+    <p>&copy; 2025 Amine El Mir</p>
   </footer>
-
-  <script src="script.js"></script>
 </body>
 </html>
