--- a/index.html
+++ b/index.html
@@ -6,24 +6,30 @@
   <title>Portfolio d'Amine</title>
   <link rel="stylesheet" href="style.css"/>
 </head>
+<audio id="bgMusic" src="sounds/onepiece.mp3" loop autoplay></audio>
 <body>
 
   <!-- HEADER -->
-  <header>
-   <div class="logo">
-    <img src="images/logo.webp" alt="Logo Amine"  class="logo-img">
+<header>
+  <div class="logo">
+    <img src="images/logo.webp" alt="Logo Amine" class="logo-img">
   </div>
 
-    <nav>
-      <ul>
-        <li><a href="#hero">Accueil</a></li>
-        <li><a href="#about">MySkills</a></li>
-        <li><a href="#projects">Projets</a></li>
-        <li><a href="#contact">Contact</a></li>
-      </ul>
-    </nav>
+  <nav>
+    <ul>
+      <li><a href="#hero">Accueil</a></li>
+      <li><a href="#about">MySkills</a></li>
+      <li><a href="#projects">Projets</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+
+  <div class="header-buttons">
     <button id="theme-toggle">🌙</button>
-  </header>
+    <button id="volume-toggle">🔊</button>
+  </div>
+</header>
+
 
   <<!-- HERO SECTION -->
 <section id="hero">
@@ -69,7 +75,7 @@
   </section>
 
  <section id="contact">
-  <h2>Contact</h2>
+
 
   <form class="onepiece-form">
     <h2>Rejoins l’équipage !</h2>
