--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Portfolio d'Amine</title>
   <link rel="stylesheet" href="style.css"/>
 </head>
-<audio id="bgMusic" src="sounds/onepiece.mp3" loop autoplay></audio>
+<audio id="bgMusic" src="sounds/onepieceneuil.mp3" loop autoplay></audio>
 <body>
 
   <!-- HEADER -->
@@ -43,10 +43,14 @@
       alt="Avis de recherche El-Mir-Amine" 
       class="wanted-poster"
     />
+    <a href="https://github.com/ElmirAmine" target="_blank" rel="noopener noreferrer" class="hero-logo-link">
+  <img src="images/github.webp" alt="GitHub Logo" class="hero-logo" />
+</a>
+
   </div>
 </section>
 
-  <!-- ABOUT SECTION -->
+
   <section id="about">
     <h2>My skills
   
