--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Portfolio d'Amine</title>
   <link rel="stylesheet" href="style.css"/>
 </head>
-<audio id="bgMusic" src="sounds/onepieceneuil.mp3" loop autoplay></audio>
+<audio id="bgMusic" src="sounds/onepiece-.mp3" loop autoplay></audio>
 <body>
 
   <!-- HEADER -->
