--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Portfolio d'Amine</title>
   <link rel="stylesheet" href="style.css"/>
 </head>
-<audio id="bgMusic" src="sounds/onepiece-.mp3" loop autoplay></audio>
+<audio id="bgMusic" src="sounds/onepiece--.mp3" loop autoplay></audio>
 <body>
 
   <!-- HEADER -->
@@ -31,24 +31,43 @@
 </header>
 
 
-  <<!-- HERO SECTION -->
+  <!-- HERO SECTION -->
 <section id="hero">
- <h1>
-  <img src="images/developpeur web.webp" alt="Titre One Piece" class="hero-title-img">
-</h1>
+  <h1>
+    <img src="images/developpeur web.webp" alt="Titre One Piece" class="hero-title-img">
+  </h1>
 
-  <div class="prime-container">
-    <img 
-      src="images/prime.png"
-      alt="Avis de recherche El-Mir-Amine" 
-      class="wanted-poster"
-    />
-    <a href="https://github.com/ElmirAmine" target="_blank" rel="noopener noreferrer" class="hero-logo-link">
-  <img src="images/github.webp" alt="GitHub Logo" class="hero-logo" />
+ <div class="prime-container">
+  <img 
+    id="prime-image"
+    src="images/prime.png"
+    alt="Avis de recherche El-Mir-Amine" 
+    class="wanted-poster"
+  />
+
+  <img 
+    id="affiche-image"
+    src="images/affiche.webp"
+    alt="Affiche"
+    class="hero-affiche-logo"
+    style="display: none;"
+  />
+</div>
+
+
+    <!-- Lien vers GitHub -->
+    <a href="https://github.com/ElmirAmine" class="hero-logo-link">
+  <img src="images/github.webp" alt="GitHub" class="hero-logo" />
 </a>
+
+<a href="https://mail.google.com/mail/?view=cm&fs=1&to=amineelmir030@gmail.com" target="_blank"  class="hero-email-link">
+  <img src="images/email.png" alt="Email" class="hero-email-logo" />
+</a>
+
 
   </div>
 </section>
+
 
 
   <section id="about">
