--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <!-- HERO SECTION -->
 <section id="hero">
   <h1>
-    <img src="images/developpeur web.webp" alt="Titre One Piece" class="hero-title-img">
+    <img src="images/developpeur web.png" alt="Titre One Piece" class="hero-title-img">
   </h1>
 
  <div class="prime-container">
