--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Portfolio d'Amine</title>
   <link rel="stylesheet" href="style.css"/>
+  <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <audio id="bgMusic" src="sounds/onepiece--.mp3" loop autoplay></audio>
 <body>
@@ -52,7 +53,10 @@
     class="hero-affiche-logo"
     style="display: none;"
   />
+  <!-- Texte superposé -->
+  <div id="affiche-text" class="affiche-text-style"></div>
 </div>
+
 
 
     <!-- Lien vers GitHub -->
